test/compile_errors/err_goto_enter_inner_block.w
//! expect-check-fail: goto would enter a block from outside

fn main:
    goto 'inside
    if true:
        'inside 0
